--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -204,6 +204,11 @@ jobs:
           helm repo update
           helm install prometheus-operator-crds prometheus-community/prometheus-operator-crds
 
+      - name: Deploy operator
+        run: |
+          make install
+          make deploy
+
       - name: Wait and check operator is running
         run: |
           sleep 20
