fix: added missing permissions to watch namespaces

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -4,13 +4,17 @@ kind: ClusterRole
 metadata:
   name: manager-role
 rules:
-- resources:
+- apiGroups:
+  - ""
+  resources:
   - namespaces
   verbs:
   - get
   - list
   - watch
-- resources:
+- apiGroups:
+  - ""
+  resources:
   - namespaces/status
   verbs:
   - get
