--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: tagesspiegel/kubernetes-namespace-permission-manager
-  newTag: latest
+  newTag: dev
