--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -67,7 +67,7 @@ spec:
         #   type: RuntimeDefault
       containers:
       - command:
-        - /manager
+        - /controller
         args:
         - --leader-elect
         image: controller:latest
