chore: group dependabot pull requests
Signed-off-by: Leon Steinhäuser <42437185+leonsteinhaeuser@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,10 @@ updates:
     labels:
       - dep/go
       - dependabot
+    groups:
+      go-deps:
+        patterns:
+          - "*"
   - package-ecosystem: docker
     directory: "/"
     schedule:
@@ -19,6 +23,10 @@ updates:
     labels:
       - dep/docker
       - dependabot
+    groups:
+      docker-deps:
+        patterns:
+          - "*"
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
@@ -26,3 +34,7 @@ updates:
     labels:
       - dep/gh-actions
       - dependabot
+    groups:
+      actions-deps:
+        patterns:
+          - "*"
